--- a/Scripts/Basic Games.ipynb
+++ b/Scripts/Basic Games.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "513d2cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Easy games\n",
+    "# multiply to list\n",
+    "# join list using \n",
+    "# use map, reduce, filter\n",
+    "\n",
+    "listing = [1,2,3,4,5]\n",
+    "def add_list(x):\n",
+    "    x = x +1\n",
+    "    return x\n",
+    "\n",
+    "list(map(add_list,listing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e8ec3e4e",
    "metadata": {},
    "outputs": [
@@ -16,7 +47,7 @@
    ],
    "source": [
     "# print challenges\n",
-    "for i in range(0,3):\n",
+    "for _ in range(3): # here we can use a placeholer\n",
     "    print(\"?\", end = \"\")\n",
     "    print(\"?\", end = \" \")"
    ]
@@ -94,6 +125,7 @@
    ],
    "source": [
     "# same version using recursion\n",
+    "import random\n",
     "list_of_words = [\"hello\",\"provided\", \"datascience\",\"randomforest\",\"pca\",\"kmeans\",\n",
     "                \"umap\",\"autoencoder\",\"streamlit\",\"python\",\"matplotlib\",\"pandas\"]\n",
     "\n",
@@ -230,27 +262,24 @@
     "# while loops is just to play the game frequently\n",
     "while True:    \n",
     "    integer = input()\n",
-    "    \n",
+    "\n",
     "    # convert input to integer\n",
     "    # check if exit is written to exit the loop\n",
     "    try:\n",
     "        integer = int(integer)\n",
     "        print(integer%2)\n",
     "    except Exception as e:\n",
-    "        if integer == \"exit\":\n",
-    "            print(\"Game ended\")\n",
-    "            break\n",
-    "        else:\n",
+    "        if integer != \"exit\":\n",
     "            continue\n",
-    "    \n",
+    "\n",
+    "        print(\"Game ended\")\n",
+    "        break\n",
     "    # check the modulus\n",
     "    if integer % 2 != 0:\n",
     "        print(\"Weird\")\n",
-    "    elif integer % 2 == 0:\n",
+    "    else:\n",
     "        print(\"its even\")\n",
-    "        if (integer < 5) or (integer < 11):\n",
-    "            print(\"Not Weird\")\n",
-    "        elif integer > 20 :\n",
+    "        if integer < 5 or integer < 11 or integer > 20:\n",
     "            print(\"Not Weird\")\n",
     "        else:\n",
     "            print(\"Weird\")\n"
@@ -355,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuroscience_beginner",
    "language": "python",
    "name": "python3"
   },
@@ -369,7 +398,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b29e83ee11e7f59cb38c31a3bdf4f8395742e175511a4c2dd46f06d53a300255"
+   }
   }
  },
  "nbformat": 4,
