revamped numpy tutorial

--- a/Scripts/Basic Matplotlib.ipynb
+++ b/Scripts/Basic Matplotlib.ipynb
@@ -136,16 +136,14 @@
     }
    ],
    "source": [
-    "array_scatter = np.linspace(0,10,50)\n",
-    "\n",
     "fig = plt.figure() # here we can further decide on how many plots and the figure size\n",
     "ax = plt.axes()\n",
-    "plt.plot(array_scatter,\n",
-    "         np.sin(array_scatter),\n",
+    "plt.plot(array,\n",
+    "         np.sin(array),\n",
     "         \"o\", \n",
     "         color = \"k\") # we can change the color with the color\n",
-    "plt.plot(array_scatter, \n",
-    "         np.cos(array_scatter),\n",
+    "plt.plot(array, \n",
+    "         np.cos(array),\n",
     "         \"o\", \n",
     "         color = \"green\", \n",
     "         label = \"cos(x)\") # we can also add a label"
@@ -186,9 +184,9 @@
     "sizes = 500* np.random.rand(50)\n",
     "# this function can be also used to give different sizes to the different points\n",
     "# this can act as additional dimension for the viewer\n",
-    "plt.scatter(array_scatter, np.sin(array_scatter), color = \"green\", s = 15, label = \"Data1\")\n",
-    "plt.scatter(array_scatter, \n",
-    "            np.cos(array_scatter), \n",
+    "plt.scatter(array, np.sin(array), color = \"green\", s = 15, label = \"Data1\")\n",
+    "plt.scatter(array, \n",
+    "            np.cos(array), \n",
     "            c = colors, \n",
     "            s = sizes, \n",
     "            cmap = \"viridis\", \n",
@@ -231,9 +229,9 @@
     "sizes = 500* np.random.rand(50)\n",
     "# this function can be also used to give different sizes to the different points\n",
     "# this can act as additional dimension for the viewer\n",
-    "plt.scatter(array_scatter, np.sin(array_scatter), color = \"green\", s = 15, label = \"Data1\")\n",
-    "plt.scatter(array_scatter, \n",
-    "            np.cos(array_scatter), \n",
+    "plt.scatter(array, np.sin(array), color = \"green\", s = 15, label = \"Data1\")\n",
+    "plt.scatter(array, \n",
+    "            np.cos(array), \n",
     "            c = colors, \n",
     "            s = sizes, \n",
     "            cmap = \"viridis\", \n",
@@ -271,13 +269,13 @@
    "source": [
     "# we can also visualize errors \n",
     "error = 0.5\n",
-    "plt.errorbar(array_scatter, np.sin(array_scatter), yerr = error)\n",
+    "plt.errorbar(array, np.sin(array), yerr = error)\n",
     "# but error can be also of length of the sequence\n",
     "y_err = np.random.rand(50)\n",
-    "plt.errorbar(array_scatter, np.cos(array_scatter), yerr = y_err)\n",
+    "plt.errorbar(array, np.cos(array), yerr = y_err)\n",
     "# we can also change the style of the errorbar \n",
-    "plt.errorbar(array_scatter, \n",
-    "             array_scatter, \n",
+    "plt.errorbar(array, \n",
+    "             array, \n",
     "             yerr = y_err, \n",
     "             elinewidth=3, \n",
     "             ecolor=\"red\",\n",
@@ -325,6 +323,7 @@
     "# the histogram\n",
     "# lets create a new array with. more data\n",
     "data = np.random.rand(1000) # randomly choosen\n",
+    "\n",
     "data_normal_1 = np.random.normal(3,2,1000) # choosen from normal distribution\n",
     "data_normal_2 = np.random.normal(-1,2,1000) # mean, standard variation\n",
     "data_normal_3 = np.random.normal(-1,7,1000)\n",
@@ -337,7 +336,7 @@
     "plt.title(\"Uniform distribution\")\n",
     "# create a second subplot\n",
     "plt.subplot(1,2,2)\n",
-    "plt.hist(data_normal, bins = 30, color = \"red\", alpha = 0.5)\n",
+    "plt.hist(data_normal_1, bins = 30, color = \"red\", alpha = 0.5)\n",
     "plt.hist(data_normal_2, bins = 30, color = \"green\", alpha = 0.5)\n",
     "plt.hist(data_normal_3, bins = 30, color = \"blue\", alpha = 0.5)\n",
     "plt.title(\"Normal Distribution\")"
@@ -409,9 +408,9 @@
     "sizes = 500* np.random.rand(50)\n",
     "# this function can be also used to give different sizes to the different points\n",
     "# this can act as additional dimension for the viewer\n",
-    "plt.scatter(array_scatter, np.sin(array_scatter), color = \"green\", s = 15, label = \"Data1\")\n",
-    "plt.scatter(array_scatter, \n",
-    "            np.cos(array_scatter), \n",
+    "plt.scatter(array, np.sin(array), color = \"green\", s = 15, label = \"Data1\")\n",
+    "plt.scatter(array, \n",
+    "            np.cos(array), \n",
     "            c = colors, \n",
     "            s = sizes, \n",
     "            cmap = \"viridis\", \n",
@@ -468,6 +467,20 @@
     "         rotation_mode=\"anchor\")\n",
     "#plt.grid(None) # since grids are not that useful for heatmaps\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0b8a78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets use a higher level plotting library\n",
+    "# Seaborn\n",
+    "# https://seaborn.pydata.org/examples/index.html\n",
+    "# install first\n",
+    "import seaborn as sns"
    ]
   }
  ],
