--- a/Scripts/Basic Games.ipynb
+++ b/Scripts/Basic Games.ipynb
@@ -2,6 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "cfe7e38c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loop structures\n",
+    "# get the mean of the list \n",
+    "meaned_list = [1,4,5,1,2,3,8,9,1,1,2,3]\n",
+    "agg_number = 0 \n",
+    "for i in meaned_list:\n",
+    "    agg_number += i\n",
+    "\n",
+    "agg_number/len(meaned_list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a41c44bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 7, 5, 11, 13, 12, 12, 13, 6]\n",
+      "9.0\n",
+      "13\n",
+      "5\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.st add up two lists:\n",
+    "# 2. calculate the mean of the added aggregated list \n",
+    "# 3. retrieve the highest number from each list as well as from the aggregated list\n",
+    "# 4. Do this all in one for loop\n",
+    "list_a = [1,2,3,4,5,3,2,2,1]\n",
+    "list_b = [1,5,2,7,8,9,10,11,5]\n",
+    "\n",
+    "agg_list = []\n",
+    "mean_agg = 0\n",
+    "highest_number = 0\n",
+    "high_a = 0\n",
+    "high_b = 0\n",
+    "\n",
+    "for i,t in zip(list_a, list_b):\n",
+    "    agg_numb = i + t\n",
+    "    agg_list.append(agg_numb)\n",
+    "    mean_agg += agg_numb\n",
+    "    \n",
+    "    if agg_numb > highest_number:\n",
+    "        highest_number = agg_numb\n",
+    "        \n",
+    "    if i > high_a:\n",
+    "        high_a = i\n",
+    "        \n",
+    "    if t > high_b:\n",
+    "        high_b = t\n",
+    "        \n",
+    "print(agg_list)\n",
+    "print(mean_agg/len(agg_list))\n",
+    "print(highest_number)\n",
+    "print(high_a)\n",
+    "print(high_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "391586b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2\n",
+      "1 7\n",
+      "2 5\n",
+      "3 11\n",
+      "4 13\n",
+      "5 12\n",
+      "6 12\n",
+      "7 13\n",
+      "8 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the index as well as the value\n",
+    "\n",
+    "for index, value in enumerate(agg_list):\n",
+    "    print(index, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "513d2cfb",
    "metadata": {},
@@ -27,7 +138,6 @@
     "def add_list(x):\n",
     "    x = x +1\n",
     "    return x\n",
-    "\n",
     "list(map(add_list,listing))"
    ]
   },
@@ -357,20 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "08ac5b6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution\n",
     "def is_leap(year):\n",
-    "    leap = False\n",
-    "    if year % 4 == 0:\n",
-    "        if (year % 100 == 0) and (year % 400 != 0):\n",
-    "            leap = False\n",
-    "        else:\n",
-    "            leap = True    \n",
-    "    return leap"
+    "    return year % 100 != 0 or year % 400 == 0 if year % 4 == 0 else False"
    ]
   },
   {
