--- a/Scripts/Basic Python.ipynb
+++ b/Scripts/Basic Python.ipynb
@@ -253,7 +253,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
+   "id": "ca9bde9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if conditions\n",
+    "# if:\n",
+    "# elif:\n",
+    "# else:\n",
+    "# replace with if if instead of if else\n",
+    "# or use a range instead of multiple queries\n",
+    "value = 60\n",
+    "# here we can use the operator\n",
+    "if 60 <= value < 90:\n",
+    "    print(\"Yes\")\n",
+    "elif value < 80:\n",
+    "    print(\"its below 80\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "af1eb876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can become a Data Scientist\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we in addition have also a match switch statement\n",
+    "# only possible in python 3.10\n",
+    "# Can be used for ranges too \n",
+    "# Its a good equivalent for elif collections\n",
+    "lang = input(\"What's the programming language you want to learn? \")\n",
+    "\n",
+    "match lang:\n",
+    "    case \"JavaScript\":\n",
+    "        print(\"You can become a web developer.\")\n",
+    "\n",
+    "    case \"Python\":\n",
+    "        print(\"You can become a Data Scientist\")\n",
+    "\n",
+    "    case \"PHP\":\n",
+    "        print(\"You can become a backend developer\")\n",
+    "    \n",
+    "    case \"Solidity\":\n",
+    "        print(\"You can become a Blockchain developer\")\n",
+    "\n",
+    "    case \"Java\":\n",
+    "        print(\"You can become a mobile app developer\")\n",
+    "    case _:\n",
+    "        print(\"The language doesn't matter, what matters is solving problems.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9485c217",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "0284447a",
    "metadata": {},
    "outputs": [
@@ -261,33 +340,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "2\n",
-      "4\n",
-      "4\n",
       "1\n",
       "2\n",
       "4\n",
-      "0 0\n",
+      "4\n",
+      "0 1\n",
       "1 2\n",
       "2 4\n",
       "3 4\n",
-      "4 1\n",
-      "5 2\n",
-      "6 4\n",
-      "0 0\n",
+      "0 1\n",
       "1 2\n",
       "2 4\n",
       "3 4\n",
-      "4 1\n",
-      "5 2\n",
-      "6 4\n",
-      "0 0\n",
-      "2 2\n",
-      "4 4\n",
-      "4 4\n",
       "1 1\n",
       "2 2\n",
+      "4 4\n",
       "4 4\n"
      ]
     }
@@ -295,10 +362,10 @@
    "source": [
     "# how to iterate over lists?\n",
     "# zip and no zip\n",
-    "list_a = [0,2,4,4,1,2,4]\n",
-    "\n",
+    "list_a = [1,2,4,4]\n",
     "for i in list_a:\n",
     "    print(i)\n",
+    "    \n",
     "for i in range(len(list_a)):\n",
     "    print(i,list_a[i])\n",
     "    \n",
@@ -308,14 +375,25 @@
     "for i,t in zip(list_a, list_a):\n",
     "    print(i,t)\n",
     "    \n",
+    "    \n",
+    "###############################\n",
     "# exercise:\n",
     "# take list_a and only multiple if the index position is even\n",
-    "# than update the list and replace the value"
+    "# than update the list and replace the value\n",
+    "################################\n",
+    "# second excersise:\n",
+    "# how can you print consecute letters like bigrams of words such as emma?\n",
+    "# should be like:\n",
+    "#em\n",
+    "#mm\n",
+    "#ma\n",
+    "# use zip for this\n",
+    "###############################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "ba7bb22a",
    "metadata": {},
    "outputs": [
@@ -323,24 +401,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [42]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(index)\n\u001b[0;32m----> 6\u001b[0m     list_a[index] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m2\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mvalue\u001b[49m  \n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     list_a\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+      "0\n",
+      "2\n",
+      "[2.0, 2, 0.5, 4]\n"
      ]
     }
    ],
    "source": [
     "# and here now we learn about exceptions!\n",
     "# try the same with division\n",
+    "# what happens when a division by zero happens\n",
     "for index, value in enumerate(list_a):\n",
     "    if index % 2 == 0:\n",
     "        print(index)\n",
@@ -352,7 +422,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
+   "id": "6e0df21b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "division by zero\n",
+      "[2.0, 2, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and here now we learn about exceptions!\n",
+    "# try the same with division\n",
+    "# what happens when a division by zero happens\n",
+    "list_zero = [1,2,0,1]\n",
+    "for index, value in enumerate(list_zero):\n",
+    "    if index % 2 == 0:\n",
+    "        print(value)\n",
+    "        try:\n",
+    "            list_zero[index] = 2/value  \n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
+    "    else:\n",
+    "        list_zero\n",
+    "print(list_zero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "fc1fca36",
    "metadata": {},
    "outputs": [
@@ -360,8 +465,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Maximilian Zeidler\n",
+      "Maximilian Zeidler\n",
+      "{'teacher': 'Maximilian Zeidler', 'students': ['Student1', 'Student2']}\n",
+      "{'teacher': 'Kai Kummer', 'students': ['Student1', 'Student2']}\n",
       "{'teacher': 'Kai Kummer', 'students': ['Student1', 'Student2', 'new_student2']}\n",
-      "{'teacher': 'Kai Kummer', 'students': ['Student1', 'Student2', 'new_student2']}\n"
+      "{'teacher': 'Kai Kummer', 'students': ['Student1', 'Student2', 'new_student2']}\n",
+      "{'teacher': 'Kai Kummer', 'students': ['Student1', 'Student2', 'new_student2', 'new_student2']}\n"
      ]
     }
    ],
@@ -370,14 +480,18 @@
     "# dictionaries evaluate like this\n",
     "# here you can see mutatbility\n",
     "# how to process the data\n",
-    "\n",
     "course_dict = {\"teacher\": \"Maximilian Zeidler\", \"students\": [\"Student1\", \"Student2\"]}\n",
+    "print(course_dict[\"teacher\"])\n",
+    "print(course_dict.get(\"teacher\"))\n",
+    "print(course_dict)\n",
     "course_dict.update({\"teacher\": \"Kai Kummer\"})\n",
+    "print(course_dict)\n",
     "course_dict[\"students\"].append(\"new_student2\")\n",
     "print(course_dict)\n",
     "#course_dict.update({\"students\": \"New_student\"})\n",
     "print(course_dict)\n",
-    "course_dict[\"students\"].append(\"new_student2\")"
+    "course_dict[\"students\"].append(\"new_student2\")\n",
+    "print(course_dict)"
    ]
   },
   {
@@ -419,17 +533,19 @@
     "# loop through dictionaries\n",
     "for key in course_dict: # this loops through keys\n",
     "    print(key)\n",
+    "    \n",
+    "# go through all the keys   \n",
+    "for key in course_dict.keys(): # runs through the keys # can you access the values per keys?\n",
+    "    print(key) # same as first\n",
+    "\n",
+    "for value in course_dict.values(): # runs through the value\n",
+    "    print(value)\n",
+    "    \n",
     "# this should show the looping behavior with different data structures\n",
     "for key, value in course_dict.items():\n",
     "    for i in value:\n",
     "        print(i)\n",
     "    print(key, value)\n",
-    "    \n",
-    "for key in course_dict.keys(): # runs through the keys\n",
-    "    print(key) # same as first\n",
-    "\n",
-    "for value in course_dict.values(): # runs through the value\n",
-    "    print(value)\n",
     "# question: build a dictionary of classmates and give them a mark for the course\n",
     "# then assign a new key with ranking if student has a 1 or 2 then rank him as top \n",
     "# else as ok\n",
@@ -439,10 +555,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d0ab3f",
+   "id": "516b59f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Can you implement the switch statement as an Dictionary?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "581915a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world, its: morning\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'morningdark'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def hello_world(daytime):\n",
+    "    \"\"\"_summary_: Should Print Hello World\n",
+    "    \"\"\"\n",
+    "    print(f\"hello world, its: {daytime}\")\n",
+    "    new_time = daytime + \"dark\"\n",
+    "    return new_time\n",
+    "    \n",
+    "hello_world(\"morning\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -462,6 +615,8 @@
     }
    ],
    "source": [
+    "# this could be an exercies!\n",
+    "# \n",
     "def get_unique_values_from_list(queried_liste: list) -> list:\n",
     "    \"\"\" Function to retrieve the unique values from a inserted list\n",
     "    args:\n",
@@ -481,11 +636,63 @@
     "unique_list = get_unique_values_from_list([False, True, True, False])\n",
     "unique_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9c3b8239",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The teacher of the course: Data Science for Neuroscientists is Max Zeidler and the following students are in this course []\n",
+      "The teacher of the course: Data Science for Neuroscientists is Max Zeidler and the following students are in this course ['Kai Kummer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class course:\n",
+    "    def __init__(self, teacher: str, course_name: str) -> None:\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "        Args:\n",
+    "            teacher (str): Teachers Name\n",
+    "            course_name (str): Course Name\n",
+    "        \"\"\"\n",
+    "        self.teacher : str = teacher\n",
+    "        self.course_name : str = course_name\n",
+    "        self.students : list = []\n",
+    "        \n",
+    "    def greet_course(self):\n",
+    "        print(\"Hello Data Scientist\")\n",
+    "        \n",
+    "    def add_student(self, student):\n",
+    "        self.students.append(student)\n",
+    "        \n",
+    "    def get_students(self):\n",
+    "        return self.students\n",
+    "    \n",
+    "    def get_teacher(self):\n",
+    "        return self.teacher\n",
+    "    \n",
+    "    def set_teacher(self, teacher):\n",
+    "        self.teacher = teacher\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"The teacher of the course: {self.course_name} is {self.teacher} and the following students are in this course {self.students}\"   \n",
+    "                \n",
+    "neuroscience_course = course(\"Max Zeidler\", \"Data Science for Neuroscientists\")\n",
+    "print(neuroscience_course)\n",
+    "neuroscience_course.add_student(\"Kai Kummer\")\n",
+    "print(neuroscience_course)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuroscience_beginner",
    "language": "python",
    "name": "python3"
   },
@@ -500,6 +707,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b29e83ee11e7f59cb38c31a3bdf4f8395742e175511a4c2dd46f06d53a300255"
+   }
   }
  },
  "nbformat": 4,
