--- a/Scripts/Parkinson DataFrame.ipynb
+++ b/Scripts/Parkinson DataFrame.ipynb
@@ -1732,7 +1732,7 @@
     }
    ],
    "source": [
-    "#\n",
+    "# retrieve the accuracy\n",
     "from sklearn.metrics import accuracy_score\n",
     "y_pred = rf_model.predict(X_test)\n",
     "print('Model accuracy score with 10 decision-trees : {0:0.4f}'. format(accuracy_score(y_test, y_pred)))"
