added map,reduce, filter and an exercise

--- a/Scripts/Basic Python.ipynb
+++ b/Scripts/Basic Python.ipynb
@@ -1,54 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d14519eb",
    "metadata": {},
    "source": [
-    "## Python Basics for Neuroscientists \n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "<a href = \"\"> </a>\n",
-    "<p> Python is an interpreted higher level programming languages that is widely used in the field of data manipulation, data science, web development, machine learning, deep learning,\n",
-    "web scraping, GUI development and more. Python is a so called multi purpose language\n",
-    "</p>\n",
-    "<br>\n",
-    "<p> What will you learn in this Course: </p>\n",
-    "<br>\n",
-    "<ul>\n",
-    "    <li> Basics in Python </li>\n",
-    "        <ul>\n",
-    "            <li> Data Types </li>\n",
-    "            <li> Data Structures </li>\n",
-    "            <li> Control Flows </li>\n",
-    "            <li> Functions </li>\n",
-    "            <li> Objects </li>\n",
-    "            <li> Classes </li>\n",
-    "        </ul>\n",
-    "    <li> Data Acquisition, Transformation, Wrangling, Loading </li>\n",
-    "        <ul>\n",
-    "            <li> Pandas (with Neuroscience related examples) </li>\n",
-    "            <li> Dask (used for big data import and calculations) </li>\n",
-    "            <li> Numpy (used for calculations) </li>\n",
-    "        </ul>\n",
-    "    <li> Data Visualization </li>\n",
-    "        <ul>\n",
-    "            <li> Matplotlib and Seaborn </li>\n",
-    "            <li> Plotly (If time allows)</li>\n",
-    "            <li> Small App in Streamlit </li>\n",
-    "       </ul>\n",
-    "    <li> Unsupervised Machine Learning </li>\n",
-    "        <ul> \n",
-    "            <li> Dimensional Reduction </li>\n",
-    "            <li> Clustering </li>\n",
-    "        </ul>\n",
-    "    <li> Supervised Machine Learning </li>\n",
-    "        <ul>\n",
-    "            <li> Linear Regression </li>\n",
-    "            <li> Random Forest </li>\n",
-    "        </ul>\n",
-    "<br>    "
+    "# Basics in Python"
    ]
   },
   {
@@ -599,7 +557,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "21641506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queried_list = [5,3,1,4,2,1]\n",
+    "def add_with_value(queried_list, adder = 2):\n",
+    "    for i in queried_list:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b70c0f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# can you call a function that takes a list of lists as argument \n",
+    "# [[1,2,3],[4,5,6],[7,8,9]] and returs the max number?\n",
+    "# Can you also add doc strings to the function\n",
+    "\n",
+    "def max_of_list(queried_list: list[list]):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Args:\n",
+    "        queried_list (list[list]): \n",
+    "    \"\"\"\n",
+    "    number = 0\n",
+    "    for liste in queried_list:\n",
+    "        for value in liste:\n",
+    "            if value > number:\n",
+    "                number = value\n",
+    "            else:\n",
+    "                continue\n",
+    "            \n",
+    "    return number\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3405ba2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# functional programming\n",
+    "# lambdas\n",
+    "from functools import reduce\n",
+    "list_to_add = [1,2,3,4]\n",
+    "\n",
+    "# functional programming\n",
+    "add_numbers = lambda x: x + 1 # add function\n",
+    "filter_number = lambda x: x < 2 # filter function\n",
+    "reduced_number = lambda x,y: x+y\n",
+    "\n",
+    "# apply the functions\n",
+    "added_list = map(add_numbers,list_to_add) # creates a generator what is an generator? \n",
+    "filtered_list = filter(filter_number,list_to_add)\n",
+    "reduced_list = reduce(reduced_number, list_to_add) # its adds up the particular numbers\n",
+    "\n",
+    "print(reduced_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "894f0924",
    "metadata": {},
    "outputs": [
@@ -609,7 +642,7 @@
        "[False, True]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,6 +686,7 @@
     }
    ],
    "source": [
+    "#classes\n",
     "class course:\n",
     "    def __init__(self, teacher: str, course_name: str) -> None:\n",
     "        \"\"\"_summary_\n",
