Added base operators and basics loops/functions to scripts

--- a/Scripts/Basic Games.ipynb
+++ b/Scripts/Basic Games.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ffc25b7c",
+   "metadata": {},
+   "source": [
+    "# Basic statistics using for loops and lists"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cfe7e38c",
@@ -20,12 +28,41 @@
    "source": [
     "# loop structures\n",
     "# get the mean of the list \n",
+    "\n",
     "meaned_list = [1,4,5,1,2,3,8,9,1,1,2,3]\n",
     "agg_number = 0 \n",
     "for i in meaned_list:\n",
     "    agg_number += i\n",
     "\n",
     "agg_number/len(meaned_list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "84e19b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median = 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loop structures\n",
+    "# get the median of the list \n",
+    "# This is a bit more difficult\n",
+    "meaned_list = [1,4,5,1,2,6]\n",
+    "sorted_list = sorted(meaned_list)\n",
+    "\n",
+    "if len(sorted_list) % 2 == 0:\n",
+    "    print(f\"Median = {(sorted_list[int(len(sorted_list)/2 -1)] + sorted_list[int(len(sorted_list)/2)])/2}\")\n",
+    "else:\n",
+    "    print(f\"Median = {sorted_list[int(len(sorted_list)/2)]}\")\n",
     "    "
    ]
   },
@@ -106,7 +143,6 @@
    ],
    "source": [
     "# get the index as well as the value\n",
-    "\n",
     "for index, value in enumerate(agg_list):\n",
     "    print(index, value)"
    ]
@@ -502,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
