--- a/Scripts/Basic Python.ipynb
+++ b/Scripts/Basic Python.ipynb
@@ -282,14 +282,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9485c217",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "0284447a",
    "metadata": {},
@@ -522,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "581915a3",
    "metadata": {},
    "outputs": [
@@ -539,7 +531,7 @@
        "'morningdark'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,14 +549,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "21641506",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 10, 8, 11, 9, 8]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "queried_list = [5,3,1,4,2,1]\n",
-    "def add_with_value(queried_list, adder = 2):\n",
+    "def add_with_value(queried_list, adder = 5):\n",
+    "    added_list = []\n",
     "    for i in queried_list:\n",
+    "        added_list.append(i + adder)\n",
+    "        \n",
+    "    return added_list\n",
+    "\n",
+    "add_with_value(queried_list, 7)\n",
+    "        \n",
     "        "
    ]
   },
