--- a/Scripts/Basics Numpy.ipynb
+++ b/Scripts/Basics Numpy.ipynb
@@ -127,8 +127,6 @@
    "source": [
     "# for more advanced stuff it might be necessary to directly give the output of a \n",
     "# numpy function \n",
-    "\n",
-    "\n",
     "y = 5\n",
     "z = np.empty(9) # third array \n",
     "np.multiply(array_1,y, out = z) # put computation inside the empty array\n",
@@ -338,8 +336,9 @@
     }
    ],
    "source": [
-    "np.percentile(only_heights, 25)\n",
-    "np.percentile(only_heights, 75)"
+    "# get the percentiles\n",
+    "print(np.percentile(only_heights, 25))\n",
+    "print(np.percentile(only_heights, 75))"
    ]
   },
   {
@@ -462,7 +461,7 @@
     "# e.g using a scaler\n",
     "print(array_2 * 5)\n",
     "print(array_2 + 10)\n",
-    "print(array_2 * 10)\n"
+    "print(array_2 * 10)"
    ]
   },
   {
@@ -648,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
