--- a/Scripts/Basics SingleCell.ipynb
+++ b/Scripts/Basics SingleCell.ipynb
@@ -2071,7 +2071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
