--- a/Scripts/Basic Operators.ipynb
+++ b/Scripts/Basic Operators.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Operators in Python and what the do"
+    "# Basic Operators in Python and what they do"
    ]
   },
   {
