--- a/Scripts/Basic Games.ipynb
+++ b/Scripts/Basic Games.ipynb
@@ -34,8 +34,7 @@
     "for i in meaned_list:\n",
     "    agg_number += i\n",
     "\n",
-    "agg_number/len(meaned_list)\n",
-    "    "
+    "agg_number/len(meaned_list)"
    ]
   },
   {
@@ -538,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
